# AI-recertified

./: .gitignore  us_location_counts.xlsx
.vercel/: project.json
00_AIM_Quicklinks/: README.md
00_Onramp/onramp01_Cursor_and_Git/: main.py
02_Embeddings_and_RAG/: Pythonic_RAG_Assignment.ipynb  euclidean_distance_usage.py
02_Embeddings_and_RAG/aimakerspace/: vectordatabase.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb
06_Multi_Agent_with_LangGraph/content/data/2ff22a9a/: Customer_Assistance_Response_Student_Loans_Low_Income_Students.txt
06_Multi_Agent_with_LangGraph/content/data/84623c82/: student_loans_low_income_students_response.txt
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  answer.ipynb
10_Open_DeepResearch/: open-deep-research.ipynb
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb
14_LangGraph_Platform/: reponse.md
15_A2A_LangGraph/: response.md  simple.py
16_Production_RAG_and_Guardrails/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb
16_Production_RAG_and_Guardrails/cache/embeddings/: 13252c7e49de68b4d0fd666c84503a360015c2aa-99be-5fc3-b7d4-a2f6bdb928b9  13252c7e49de68b4d0fd666c84503a360911cf92-fe57-59ed-a643-fbe9188bc25c  13252c7e49de68b4d0fd666c84503a3611e79eef-ed87-5484-bb98-7e35cf51f9a6  13252c7e49de68b4d0fd666c84503a361457400a-dc1a-5199-8b1f-226fc651fd3b  13252c7e49de68b4d0fd666c84503a36167c9c15-9972-594b-998a-983eb186481c  13252c7e49de68b4d0fd666c84503a3616d620f3-1601-5467-bb49-f60435df0e11  13252c7e49de68b4d0fd666c84503a361760f32d-64ab-528e-9d28-0b5b5d2ac1c6  13252c7e49de68b4d0fd666c84503a361860450a-9e2b-52c8-8680-810df7650985  13252c7e49de68b4d0fd666c84503a361ebfdc2c-57c1-5a2c-b12e-85ab2679f0bb  13252c7e49de68b4d0fd666c84503a361edb3449-c4e9-5614-8c9c-a06f2b4d9a6b  13252c7e49de68b4d0fd666c84503a361fcded2a-34c5-5bf8-b5c4-15157a75dc70  13252c7e49de68b4d0fd666c84503a3623b0c301-d7a6-593c-80fd-abbffb3064fe  13252c7e49de68b4d0fd666c84503a3625a79eee-cb54-50a1-b0ef-c30d4449c715  13252c7e49de68b4d0fd666c84503a362cad713f-f430-5775-aa69-7e7e04246d3f  13252c7e49de68b4d0fd666c84503a362d7e9b6e-4113-5272-aa1f-0e086a062f51  13252c7e49de68b4d0fd666c84503a362ed6a9fe-89ac-5e6c-a95f-fb67e2096922  13252c7e49de68b4d0fd666c84503a3630bb42b4-b6a6-5f6a-9640-bbdad84f3a62  13252c7e49de68b4d0fd666c84503a36335a2185-ade3-5bea-8f79-37d09c8d990b  13252c7e49de68b4d0fd666c84503a363e1fe7f8-7065-587e-8ec1-d4d28c5d47e3  13252c7e49de68b4d0fd666c84503a3641305fe3-3488-5a9e-91a4-cc80bb0429a5  13252c7e49de68b4d0fd666c84503a36425d4339-f929-5da5-a43b-d1e50abed682  13252c7e49de68b4d0fd666c84503a3642fcbab0-43d5-594d-bbfe-5bd51dd75852  13252c7e49de68b4d0fd666c84503a36496c5361-46b4-5a01-b7dc-354406c2a2c2  13252c7e49de68b4d0fd666c84503a364b0a588e-8a3f-5dfa-87a0-c62c535e7f8b  13252c7e49de68b4d0fd666c84503a364d267a1b-e4b8-5373-a65e-5b9c89e276c0  13252c7e49de68b4d0fd666c84503a3657e31010-751a-5aec-95b1-689540765484  13252c7e49de68b4d0fd666c84503a3658806576-9549-59a8-830a-ece8a5679a6d  13252c7e49de68b4d0fd666c84503a3658e5e818-233f-57a1-9a9a-89d26fbb8abe  13252c7e49de68b4d0fd666c84503a365bc6822c-87ad-517e-8706-b5fdd2698da5  13252c7e49de68b4d0fd666c84503a365c6fec23-1f9e-5e7c-b8a4-fc36cb49bc9a  13252c7e49de68b4d0fd666c84503a365ca180a8-757f-52ef-a9d9-764db4b6cd36  13252c7e49de68b4d0fd666c84503a365f6dac55-8918-57e6-ad62-656d68e88737  13252c7e49de68b4d0fd666c84503a366758d488-c492-5b0c-8c5e-ac0318a132ee  13252c7e49de68b4d0fd666c84503a366963a36b-dfc7-53b0-98cf-3de85480698c  13252c7e49de68b4d0fd666c84503a366ad88195-c74f-574b-8095-f9758cfae7f4  13252c7e49de68b4d0fd666c84503a366cf5d3ea-c32f-52d3-a7b7-42838759e4e3  13252c7e49de68b4d0fd666c84503a3671c6b3e1-87ca-5bb3-a852-43b47c190d50  13252c7e49de68b4d0fd666c84503a36768be173-752a-5859-aa92-7d9e2ffeb4ad  13252c7e49de68b4d0fd666c84503a367a3caafe-7e94-5493-bdc9-5ee1be410c5c  13252c7e49de68b4d0fd666c84503a368253edff-a357-5d0b-936d-41ed8952637f  (+51 more)
AIE7-MCP-Session/: check_mcp_adapters.py  check_mcp_package_files.py  server.py  simple_langgraph_app.py  test_mcp_server_toolkit.py
MVP/: .ipynb  README.md  generate_survey_data_files.py  pyproject.toml  run_app.py  survey_sentinel.db
MVP/data/: alert_rules.json  customer_master.csv  product_features.md  question_codes.json  survey_responses.csv
MVP/demo/: streamlit_app.py
MVP/notebooks/: agent_analysis.ipynb
MVP/src/: advanced_retrieval.py  flagging_agent.py  llm_processor.py  main.py  models.py  rag_generator.py  ragas_comparison_results.json  ragas_evaluation.py  ragas_evaluation_results.json  survey_sentinel_ui.html  vector_store.py  web_search_api.py
MVP/src/survey_sentinel_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
MVP/tests/: test_agents.py  test_pipeline.py  test_ragas.py
The-AI-Engineer-Challenge/: MERGE.md  README.md  activities.md  vercel.json
The-AI-Engineer-Challenge/.cursor/rules/: general-rule.mdc  global.mdc
The-AI-Engineer-Challenge/api/: app.py  chat.py  config.py  index.py  requirements.txt  test.py
The-AI-Engineer-Challenge/frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
The-AI-Engineer-Challenge/frontend/app/: globals.css  layout.tsx  page.tsx
